# try-rtos

./: Cargo.toml  README.md  rust-toolchain.toml
rtos/: Cargo.toml  build.rs
rtos/src/: hal.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
